--- a/myProject/Views/Shared/_Layout.cshtml
+++ b/myProject/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
     <div class="container body-content">
         @RenderBody()
         <hr />
-        <footer>
+        <footer style="clear: both">
             <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
         </footer>
     </div>
