--- a/myProject/Views/Ticket/Details.cshtml
+++ b/myProject/Views/Ticket/Details.cshtml
@@ -1,4 +1,5 @@
-﻿@model myProject.Models.Ticket
+﻿@using Microsoft.AspNet.Identity
+@model myProject.Models.Ticket
 
 @{
     ViewBag.Title = "Details";
@@ -8,33 +9,20 @@
 <h2>Details</h2>
 
 <div>
-    <h4>Ticket</h4>
+    <h4>@Model.Title</h4>
     <hr />
     <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.UserId)
-        </dt>
-
+        <a id="user_profile" href="@Url.Action("ViewProfile","Account",new {id=Model.UserId})">
+            <img class="user_thumbnail" src="@Model.User.Avatar" />
+            <h6>@Model.User.UserName</h6>
+        </a>
+        @if (Int32.Parse(User.Identity.GetUserId()) == Model.UserId)
+        {
+            @Html.ActionLink("Edit", "Edit", new { id = Model.Id })
+        }
         <dd>
-            @Html.DisplayFor(model => model.UserId)
+            <img src="@Model.Logo" />
         </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Title)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Title)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Logo)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Logo)
-        </dd>
-
         <dt>
             @Html.DisplayNameFor(model => model.Content)
         </dt>
@@ -42,8 +30,17 @@
         <dd>
             @Html.DisplayFor(model => model.Content)
         </dd>
-
     </dl>
+    <div id="replyHere">
+        @if (Model.Reply == null)
+        {
+            @Ajax.ActionLink("Add reply", "Create", "Replies", new { ticketId = Model.Id }, new AjaxOptions { UpdateTargetId = "replyHere" })
+        }
+        else
+        {
+            @Html.Action("ShowReply", "Replies", new { id = Model.Id })
+        }
+    </div>
 </div>
 <p>
     @Html.ActionLink("Back to List", "Tickets")
