--- a/myProject/Views/Ticket/UserTickets.cshtml
+++ b/myProject/Views/Ticket/UserTickets.cshtml
@@ -1,5 +1,8 @@
 ﻿@model IEnumerable<myProject.Models.Ticket>
 <div>
+    <p class="create_ticket">
+        @Html.ActionLink("Create New", "Create")
+    </p>
     <table id="tickets">
         <tr>
             <th>
@@ -13,6 +16,9 @@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.TypeOfTicket)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Reply)
             </th>
         </tr>
         @foreach (var item in Model)
@@ -29,6 +35,16 @@
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.TypeOfTicket)
+                </td>
+                <td>
+                    @if (item.Reply == null)
+                    {
+                        <p>Sorry, no replies :(</p>
+                    }
+                    else
+                    {
+                        <a href="@Url.Action("Details",new {id=item.Id})">View Reply</a>
+                    }
                 </td>
                 <td>
                     <a href="@Url.Action("Edit", "Ticket", new { id = item.Id })"><img alt="edit" src="/Content/edit.png" class="action" /></a>
