added Edit for replies

--- a/myProject/Views/Replies/ShowReply.cshtml
+++ b/myProject/Views/Replies/ShowReply.cshtml
@@ -1,4 +1,5 @@
-﻿@model myProject.Models.Replies
+﻿@using Microsoft.AspNet.Identity
+@model myProject.Models.Replies
 
 <div id="message">
     <h4>@Model.User.UserName said</h4>
