--- a/myProject/Views/Replies/Create.cshtml
+++ b/myProject/Views/Replies/Create.cshtml
@@ -15,7 +15,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Message, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Message)
+                @Html.TextAreaFor(model => model.Message)
                 @Html.ValidationMessageFor(model => model.Message)
             </div>
         </div>
