--- a/myProject/Views/Replies/Delete.cshtml
+++ b/myProject/Views/Replies/Delete.cshtml
@@ -1,65 +1,33 @@
 ﻿@model myProject.Models.Replies
 
 @{
-    ViewBag.Title = "Delete";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = null;
 }
 
-<h2>Delete</h2>
-
 <h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Replies</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Ticket.Title)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Ticket.Title)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.User.Firstname)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.User.Firstname)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Id)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Id)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Message)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Message)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Time)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Time)
-        </dd>
-
-    </dl>
-
-    @using (Html.BeginForm()) {
+<div id="replyDelete">
+    @using (Html.BeginForm("Delete", "Replies"))
+    {
         @Html.AntiForgeryToken()
 
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+        <div class="form-horizontal">
+            @Html.ValidationSummary(true)
+            @Html.HiddenFor(model => model.TicketId)
+            @Html.HiddenFor(model => model.UserId)
+            <div class="form-group">
+                @Html.LabelFor(model => model.Message, new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.TextAreaFor(model => model.Message)
+                    @Html.ValidationMessageFor(model => model.Message)
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="col-md-offset-2 col-md-10">
+                    <input type="submit" value="Delete" class="btn btn-default" />
+                </div>
+                @Html.ActionLink("Back to ticket", "Details", "Ticket", new {id =Model.TicketId}, null)
+            </div>
         </div>
     }
 </div>
+
