--- a/myProject/Views/Ticket/Details.cshtml
+++ b/myProject/Views/Ticket/Details.cshtml
@@ -32,9 +32,9 @@
     </dd>
 </dl>
     <div id="message1">
-        @if (Model.Reply != null && Int32.Parse(User.Identity.GetUserId()) != Model.Reply.UserId)
+        @if (Model.Reply != null && Int32.Parse(User.Identity.GetUserId()) != Model.Reply.UserId || Int32.Parse(User.Identity.GetUserId()) == Model.Reply.UserId)
         {
-            @Ajax.ActionLink("Edit Reply", "Edit", "Replies", new { id = Model.Id }, new AjaxOptions { UpdateTargetId = "replyHere" })    
+            @Ajax.ActionLink("Edit Reply", "Edit", "Replies", new { id = Model.Id }, new AjaxOptions { UpdateTargetId = "replyHere" })
             @Ajax.ActionLink("Delete Reply", "Delete", "Replies", new {id = Model.Id},new AjaxOptions{UpdateTargetId = "replyHere"})
         }
     </div>
