--- a/myProject/Views/Ticket/UserTickets.cshtml
+++ b/myProject/Views/Ticket/UserTickets.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<myProject.Models.Ticket>
+﻿@model IEnumerable<DAL.Models.Ticket>
 <div>
     <p class="create_ticket">
         @Html.ActionLink("Create New", "Create")
