--- a/myProject/Views/Account/Register.cshtml
+++ b/myProject/Views/Account/Register.cshtml
@@ -3,9 +3,7 @@
 @{
     ViewBag.Title = "Register";
 }
-
 <h2>@ViewBag.Title.</h2>
-
 @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
@@ -61,12 +59,18 @@
         </div>
     </div>
     <div class="form-group">
+        @Html.LabelFor(m => m.Languages, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.ListBoxFor(model => model.Languages, ViewBag.LanguagesList as MultiSelectList, new { @class = "form-control" })
+        </div>
+    </div>
+
+    <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
             <input type="submit" class="btn btn-default" value="Register" />
         </div>
     </div>
 }
-
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
