--- a/WebUI/Views/Replies/Create.cshtml
+++ b/WebUI/Views/Replies/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model BO.Models.Replies
+﻿@model DAL.Models.Replies
 
 @{
     Layout = null;
@@ -19,7 +19,7 @@
             </div>
         </div>
         <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
+            <div class="col-md-10">
                 <input type="submit" value="Create" class="btn btn-default" />
             </div>
         </div>
