--- a/WebUI/Views/Account/Manage.cshtml
+++ b/WebUI/Views/Account/Manage.cshtml
@@ -8,12 +8,12 @@
 
 <h2>Manage</h2>
 
-    <div id="ticketsWithReplies">
-@using (Ajax.BeginForm("UserTickets", "Ticket", new {withReply = 1}, new AjaxOptions { UpdateTargetId = "ticketsWithReplies" }))
-        {
-            <input type="submit" value="Show tickets" class="btn btn-default" />
-        }
-        </div>
+<div id="ticketsWithReplies">
+    @using (Ajax.BeginForm("UserTickets", "Ticket", new { withReply = 1 }, new AjaxOptions { UpdateTargetId = "ticketsWithReplies" }))
+    {
+        <input type="submit" value="Show tickets with replies" class="btn btn-default" />
+    }
+</div>
 <div>
     <h4>@Html.DisplayFor(model => model.UserName)</h4>
     <hr />
@@ -54,23 +54,27 @@
                 @Html.DisplayFor(model => model.City)
             </dd>
 
-             <dt>
+            <dt>
                 @Html.DisplayNameFor(model => model.Languages)
             </dt>
 
             <dd>
                 @foreach (var t in Model.Languages)
                 {
-                    Write(t+ " ");
+                    Write(t + " ");
                 }
             </dd>
         </dl>
         <p>
             @Html.ActionLink("Edit", "Edit", new { id = Model.Id })
         </p>
-        <div id="messages"></div>
-        @Ajax.ActionLink("Input", "ShowMessages", "Message", new { userId = Model.Id , output = 0 }, new AjaxOptions { UpdateTargetId = "messages" })
+        <h2>Messages</h2>
+        <hr />
+        @Ajax.ActionLink("Input", "ShowMessages", "Message", new { userId = Model.Id, output = 0 }, new AjaxOptions { UpdateTargetId = "messages" })
         @Ajax.ActionLink("Output", "ShowMessages", "Message", new { userId = Model.Id, output = 1 }, new AjaxOptions { UpdateTargetId = "messages" })
+        <div id="messages"></div>
+        <h2>My tickets</h2>
+        <hr />
         @using (Ajax.BeginForm("UserTickets", "Ticket", new AjaxOptions { UpdateTargetId = "ticketsPartial" }))
         {
             <input type="submit" value="Show tickets" class="btn btn-default" />
