--- a/WebUI/Views/Account/ViewProfile.cshtml
+++ b/WebUI/Views/Account/ViewProfile.cshtml
@@ -1,4 +1,5 @@
-﻿@model WebUI.ViewModels.ViewProfileViewModel
+﻿@using Microsoft.AspNet.Identity
+@model WebUI.ViewModels.ViewProfileViewModel
 
 @{
     ViewBag.Title = "ViewProfile";
@@ -53,20 +54,34 @@
         <dd>
             @Html.DisplayFor(model => model.Email)
         </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Languages)
+        </dt>
+
+        <dd>
+            @foreach (var t in Model.Languages)
+            {
+                Write(t + ", ");
+            }
+        </dd>
     </dl>
 </div>
-<div class="col-md-6">
-    <div id="messages"></div>
-    @Ajax.ActionLink("Send message", "Create", "Message", new { userId = Model.Id }, new AjaxOptions { UpdateTargetId = "messages" })
-    <div id="feedback">
-        @Ajax.ActionLink("Add feedback", "Create", "Feedback", new { userId = Model.Id }, new AjaxOptions { UpdateTargetId = "feedback" })
-        <div id="feedbacks">
-            <div id="feedbackForm">
-                @using (Ajax.BeginForm("ShowFeedbacks", "Feedback", new { userId = Model.Id }, new AjaxOptions { UpdateTargetId = "feedbackForm" }))
-                {
-                    <input type="submit" value="Show feedbacks" class="btn btn-default" />
-                }
+@if (Model.Id != Int32.Parse(User.Identity.GetUserId()))
+{
+    <div class="col-md-6">
+        <div id="messages"></div>
+            @Ajax.ActionLink("Send message", "Create", "Message", new { userId = Model.Id }, new AjaxOptions { UpdateTargetId = "messages" })
+        <div id="feedback">
+            @Ajax.ActionLink("Add feedback", "Create", "Feedback", new { userId = Model.Id }, new AjaxOptions { UpdateTargetId = "feedback" })
+            <div id="feedbacks">
+                <div id="feedbackForm">
+                    @using (Ajax.BeginForm("ShowFeedbacks", "Feedback", new { userId = Model.Id }, new AjaxOptions { UpdateTargetId = "feedbackForm" }))
+                    {
+                        <input type="submit" value="Show feedbacks" class="btn btn-default" />
+                    }
+                </div>
             </div>
         </div>
     </div>
-</div>
+}
