--- a/WebUI/Views/Shared/_Layout.cshtml
+++ b/WebUI/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
     </div>
     <div class="container body-content">
         @RenderBody()
-        <hr />
+        <hr  style="clear: both"/>
         <footer style="clear: both">
             <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
         </footer>
