--- a/WebUI/Views/Ticket/Details.cshtml
+++ b/WebUI/Views/Ticket/Details.cshtml
@@ -15,7 +15,7 @@
             <img class="user_thumbnail" src="@Model.UserAvatar" />
         </a>
         <dd>
-            <img src="@Model.Logo" alt="no photo" />
+            <img src="@Model.Logo" alt="no photo"  class="ticketLogo"/>
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.Content)
