--- a/WebUI/Views/Shared/_Layout.cshtml
+++ b/WebUI/Views/Shared/_Layout.cshtml
@@ -39,6 +39,8 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @Scripts.Render("~/bundles/jqueryval")
+    <script src="../../Scripts/jquery.imageZoom.js"></script>
+    <script>$('.ticketLogo').imageZoom({ lensSize : 80});</script>
     @RenderSection("scripts", required: false)
 </body>
 </html>
